2009-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* dbleQR.h: Optionally declare warn_qrupdate_once.
	* dbleQR.cc: Define it.
	* (CmplxQR.h, dbleQR.h, fCmplxQR.h, floatQR.h): Declare replacement
	methods unconditionally.
	* (CmplxQR.cc, dbleQR.cc, fCmplxQR.cc, floatQR.cc): Define
	updating replacement methods.
	* (CmplxCHOL.h, dbleCHOL.h, fCmplxCHOL.h, floatCHOL.h): Declare
	replacement methods unconditionally.
	* (CmplxCHOL.cc, dbleCHOL.cc, fCmplxCHOL.cc, floatCHOL.cc): Define
	updating replacement methods.

2009-01-21  Jaroslav Hajek  <highegg@gmail.com>

	* Range.cc ( operator + (double x, const Range& r),
	operator + (const Range& r, double x),
	operator - (double x, const Range& r),
	operator - (const Range& r, double x),
	operator * (double x, const Range& r),
	operator * (const Range& r, double x)): New operators.
	* Range.h: Declare them.


2009-01-20  John W. Eaton  <jwe@octave.org>

	* file-stat.h, file-stat.cc (class base_file_stat): New base class.
	(class file_stat): Derive from base_file_stat.
	(class file_fstat): New class, derived from base_file_stat.

2009-01-17  Jaroslav Hajek  <highegg@gmail.com>

	* floatQR.h (FloatQR::update, FloatQR::insert_col,
	FloatQR::insert_row, FloatQR::delete_col, FloatQR::delete_row,
	FloatQR::shift_col): Update interfaces.

	* floatQR.cc: Update external decls for qrupdate routines.
	(FloatQR::update, FloatQR::insert_col, FloatQR::insert_row,
	FloatQR::delete_col, FloatQR::delete_row, FloatQR::shift_col): Reflect
	changes in qrupdate interfaces, implement batch updates.

	* dbleQR.h (QR::update, QR::insert_col, QR::insert_row,
	QR::delete_col, QR::delete_row, QR::shift_col): Update interfaces.

	* dbleQR.cc: Update external decls for qrupdate routines.
	(QR::update, QR::insert_col, QR::insert_row, QR::delete_col,
	QR::delete_row, QR::shift_col): Reflect changes in qrupdate
	interfaces, implement batch updates.

	* fCmplxQR.h (FloatComplexQR::update, FloatComplexQR::insert_col,